@@ -7,6 +7,7 @@
       worked anyway), but also query.selectfirst(), query.selectone() which
       will be used as is (i.e. no query is compiled). works similarly to
       sending the results to instances().
+    - added "refresh-expire" cascade [ticket:492]
 0.3.5
 - sql:
     - the value of "case_sensitive" defaults to True now, regardless of the
